--- a/src/main/webapp/WEB-INF/i18n/application_nl_NL.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_nl_NL.properties
@@ -77,6 +77,7 @@ label_ordering_subsystem=Bestel Subsysteem
 label_kitchen_subsystem=Keuken
 label_waiter_subsystem=Bediening
 label_customer_subsystem=Klantbeheer
+label_reservation_subsystem=Reserveringen
 label_schedule_subsystem=Planning
 label_employees_subsystem=Medewerkerbeheer
 label_dining_tables= Dineertafels
