--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -23,9 +23,10 @@ label_currency=&pound;
 customer_save_success=Customer saved successfully
 customer_save_fail=Failed saving customer
 
-# customer related validation messages
+# customer & contact related validation messages
 validation.firstname.NotEmpty.message=First name is required
 validation.lastname.NotEmpty.message=Last name is required
+validation.email.NotEmpty.message=Email address is required
 validation.firstname.Size.message=First name must be between {min} and {max}
 validation.lastname.Size.message=Last name must be between {min} and {max}
 
