Revert "Mail en contact toegevoegd"
This reverts commit d020005841be95759b648430c3849e17e84f1c2e.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -23,10 +23,9 @@ label_currency=&pound;
 customer_save_success=Customer saved successfully
 customer_save_fail=Failed saving customer
 
-# customer & contact related validation messages
+# customer related validation messages
 validation.firstname.NotEmpty.message=First name is required
 validation.lastname.NotEmpty.message=Last name is required
-validation.email.NotEmpty.message=Email address is required
 validation.firstname.Size.message=First name must be between {min} and {max}
 validation.lastname.Size.message=Last name must be between {min} and {max}
 
