--- a/src/main/webapp/WEB-INF/i18n/messages_nl_NL.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_nl_NL.properties
@@ -24,10 +24,9 @@ label_currency=&euro;
 customer_save_success=Opslaan klant gelukt
 customer_save_fail=Opslaan klant mislukt
 
-# customer & contact related validation messages
+# customer related validation messages
 validation.firstname.NotEmpty.message=Voornaam is verplicht
 validation.lastname.NotEmpty.message=Achternaam is verplicht
-validation.email.NotEmpty.message=Email-adres is verplicht
 validation.firstname.Size.message=Lengte van de voornaam moet tussen {min} en {max} liggen
 validation.lastname.Size.message=Lengte van de achternaam moet tussen {min} en {max} liggen
 
