--- a/src/main/webapp/WEB-INF/i18n/messages_nl_NL.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_nl_NL.properties
@@ -24,7 +24,7 @@ label_currency=&euro;
 customer_save_success=Opslaan klant gelukt
 customer_save_fail=Opslaan klant mislukt
 
-# customer related validation messages
+# customer & contact related validation messages
 validation.firstname.NotEmpty.message=Voornaam is verplicht
 validation.lastname.NotEmpty.message=Achternaam is verplicht
 validation.firstname.Size.message=Lengte van de voornaam moet tussen {min} en {max} liggen
