Frontend aangepast, reservation pagina werkend

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -76,6 +76,7 @@ label_ordering_subsystem=Ordering
 label_kitchen_subsystem=Kitchen
 label_waiter_subsystem=Waiter
 label_customer_subsystem=Customer management
+label_reservation_subsystem=Reservations
 label_schedule_subsystem=Schedule
 label_employees_subsystem=Employee management
 label_dining_tables= Dining Tables
@@ -126,6 +127,20 @@ label_customer_update=Edit Customer
 label_customer_delete=Delete Customer
 text_no_customers_found=No customer found
 
+# reservation views
+label_reservation_description=Description
+label_reservation_groupsize=Groupsize
+label_reservation_name=Name
+label_reservation_roomID=ID
+label_reservation_price=Price
+label_reservation_new=New
+label_reservation_update=Update
+label_reservation_delete=Delete
+text_there_are_no_reservations=No reservations found
+label_reservation_word=Reservations booked
+label_create_reservation=Make reservation
+
+
 # schedule views
 label_schedule_date=Date
 label_schedule_daypart=Daypart
@@ -139,6 +154,18 @@ label_role_busser=Busser
 label_role_host=Host
 label_shift_new=Add Shift
 label_shift_update=Edit Shift
+
+# restaurant view
+label_restaurant=Restaurant
+label_ordering_subsystem=Bestel Subsysteem
+label_kitchen_subsystem=Keuken
+label_waiter_subsystem=Bediening
+label_customer_subsystem=Klantbeheer
+label_reservation_subsystem=Reserveringen
+label_schedule_subsystem=Planning
+label_employees_subsystem=Medewerkerbeheer
+label_dining_tables= Dineertafels
+label_dining_table=Dineertafel
 
 # errors
 label_back_to_home=Back to home
