--- a/src/main/webapp/WEB-INF/i18n/application_nl_NL.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_nl_NL.properties
@@ -128,6 +128,20 @@ label_customer_update=Wijzig klantgegevens
 label_customer_delete=Verwijder klant
 text_no_customers_found=Klant niet gevonden
 
+# reservation views
+label_reservation_description=Omschrijving
+label_reservation_groupsize=Groepomgvang
+label_reservation_name=Naam
+label_reservation_roomID=ID
+label_reservation_price=Prijs
+label_reservation_new=Voeg reservering toe
+label_reservation_update=Wijzig reservering
+label_reservation_delete=Verwijder reservering
+text_there_are_no_reservations=Er zijn geen reserveringen
+label_reservation_word=Geplaatste reserveringen
+label_create_reservation=Maak reservering
+table_name=Reservingsnaam
+table_groupSize=Groepsgrootte
 
 # errors
 label_back_to_home=Terug naar home
