Extra velden toegevoegd voor weergave

--- a/src/main/webapp/WEB-INF/i18n/application_nl_NL.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_nl_NL.properties
@@ -142,6 +142,8 @@ label_reservation_word=Geplaatste reserveringen
 label_create_reservation=Maak reservering
 table_name=Reservingsnaam
 table_groupSize=Groepsgrootte
+table_description=Omschrijving
+
 
 # errors
 label_back_to_home=Terug naar home
