Show pagina werkend

--- a/src/main/webapp/WEB-INF/i18n/application_nl_NL.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_nl_NL.properties
@@ -135,7 +135,7 @@ label_reservation_name=Naam
 label_reservation_roomID=ID
 label_reservation_price=Prijs
 label_reservation_new=Voeg reservering toe
-label_reservation_update=Wijzig reservering
+label_reservation_save=Reservering Opslaan
 label_reservation_delete=Verwijder reservering
 text_there_are_no_reservations=Er zijn geen reserveringen
 label_reservation_word=Geplaatste reserveringen
@@ -143,6 +143,10 @@ label_create_reservation=Maak reservering
 table_name=Reservingsnaam
 table_groupSize=Groepsgrootte
 table_description=Omschrijving
+label_reservation_status=Status
+label_reservation_facility=Gereserveerde kamer
+label_reservation_customer_name=Klantnaam 
+label_reservation_info=Reserveringsnummer:
 
 
 # errors
