Create reservation werkend!

--- a/src/main/webapp/WEB-INF/i18n/application_nl_NL.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_nl_NL.properties
@@ -147,6 +147,7 @@ label_reservation_status=Status
 label_reservation_facility=Gereserveerde kamer
 label_reservation_customer_name=Klantnaam 
 label_reservation_info=Reserveringsnummer:
+label_reservation_form_decor=Opties
 
 
 # errors
@@ -154,6 +155,8 @@ label_back_to_home=Terug naar home
 label_error=Fout
 label_error_404=Pagina niet gevonden
 label_error_400=Bad request
+reservation_save_fail=Reservering niet opgeslagen
+reservation_save_success=Oops, er is iets fout gegaan, de reservering is niet opgeslagen.
 
 # format patterns
 date_format_pattern=yyyy-MM-dd
